--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,8 @@
 <script>
 
     function show(){
-    document.getElementById("result-area").innerHTML= "IAMTHEPREDICTION";
+    tx = document.getElementById("result-area").innerHTML;
 
-    tx = "IAMTHEPREDICTION";
     html = "";
     for (i = 0; i < tx.length; i++)
     {
@@ -49,7 +48,7 @@
 
 </script>
 
-<body>
+<body onload="show()">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">UBC BioDesign</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,24 +65,24 @@
   </div>
 </nav>
 
-<div class="container" style="display: flex">
+<div>
+    <form class="container" style="display: flex" action="/predict"method="post">
 
-    <div class="form-group" style="width: 40%; height = 80vh; margin-top: 2%">
-        <label>Viral Spike Protein mRNA Sequence:</label>
-        <textarea class="form-control" rows="16" id="sequence" placeholder="AGC..."></textarea>
-        <button type="submit" class="btn btn-outline-primary" style="margin-top:2%" onclick="show()">Predict</button>
-        <button type="submit" class="btn btn-outline-success" style="margin-top:2%; margin-left: 2%" onclick="visualize()">Visualize</button>
-    </div>
-    <div class="form-group" style="width:70%; margin-left: 5%; margin-top: 2%">
-        <label>Prediction Visualization:</label>
-        <div class="visualization-area">
-            <p id="result-area"></p>
-
+        <div class="form-group" style="width: 40%; height = 80vh; margin-top: 2%">
+            <label>Viral Spike Protein mRNA Sequence:</label>
+            <textarea type="text" class="form-control" rows="16" id="sequence" name="sequence" placeholder="AGC..."></textarea>
+            <button type="submit" class="btn btn-outline-primary" style="margin-top:2%" >Predict</button>
+            <button type="submit" class="btn btn-outline-success" style="margin-top:2%; margin-left: 2%">Visualize</button>
         </div>
-    </div>
+        <div class="form-group" style="width:70%; margin-left: 5%; margin-top: 2%">
+            <label>Prediction Visualization:</label>
+            <div class="visualization-area">
+                <p id="result-area">{{ prediction_text }}</p>
+
+            </div>
+        </div>
+    </form>
 </div>
-
-
 
 </body>
 </html>
