we can download

--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
         <div class="visualization-area">
             <p id="result-area"></p>
         </div>
-        <a href="PredictedSequence.fasta" download><button type="submit" id="download" class="btn btn-outline-primary" style="margin-top:2%px; margin-left: 210px;" onclick="visualize()">Download</button></a>
+        <a href="/static/prediction/PredictedSequence.fasta" download><button type="submit" id="download" class="btn btn-outline-primary" style="margin-top:2%px; margin-left: 210px;" onclick="visualize()">Download</button></a>
     </div>
     </div>
     </div>
