--- a/templates/index.html
+++ b/templates/index.html
@@ -66,13 +66,13 @@
 
 
 <div class="container" style="display: flex">
-    <div class="form-group" style="width: 50%; margin-top: 2%">
+    <form class="form-group" action="/upload" method="POST" enctype = "multipart/form-data" style="width: 50%; margin-top: 2%">
         <label><h3><b>Viral Genome inputs:</b></h3></label>
         <p><img src="/static/1.png">Input the species name of your virus below:</p>
         <textarea class="form-control" rows="16" id="sequence" placeholder="Species name..."></textarea>
 
         <p><img src="/static/2.png">Input your viral genome below:</p>
-        <input type="file" id="real-file" hidden="hidden"/>
+        <input type="file" id="real-file" name="real-file" hidden="hidden"/>
     <button type="button" class="btn btn-outline-success" id="custom-button">Choose a file</button>
     <span id="custom-text">No file chosen</span>
 
@@ -95,13 +95,13 @@
         </script>
 
         <p><img src="static/3.png">Run your inputs through VPRE:</p>
-        <button type="submit" id="tool" class="btn btn-outline-success" style="margin-top:2%" onclick="show()">Predict</button>
+        <button type="submit" id="tool" class="btn btn-outline-success" style="margin-top:2%">Predict</button>
         <button type="submit" id="tool" class="btn btn-outline-success" style="margin-top:2%; margin-left: 2%" onclick="visualize()">Visualize</button>
-    </div>
+    </form>
     <div class="form-group" style="width:50%; margin-left: 5%; margin-top: 2%;">
         <label><h4><b>Predicted mRNA sequences:</b></h4></label>
         <div class="visualization-area">
-            <p id="result-area"></p>
+            <p id="result-area">{{prediction_text}}</p>
         </div>
         <a href="/static/prediction/PredictedSequence.fasta" download><button type="submit" id="download" class="btn btn-outline-primary" style="margin-top:2%px; margin-left: 210px;" onclick="visualize()">Download</button></a>
     </div>
