--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 <div class="menu">
         <nav>
                <ul>
-                    <li><a href="#">Tool</a></li>
+                    <li><a href="/">Tool</a></li>
                     <li><img src="/static/virosight-logo.png"></li>
                     <li><a href="https://ubcvirosight.godaddysites.com/">Home</a></li>
                </ul>
@@ -71,9 +71,11 @@
     <form class="form-group" action="/predict" method="POST" enctype = "multipart/form-data" style="width: 50%; margin-top: 2%">
         <label><h3><b>Viral Genome inputs:</b></h3></label>
         <p><img src="/static/1.png">Input the species name of your virus below:</p>
-        <textarea class="form-control" rows="16" id="sequence" placeholder="Species name..."></textarea>
+        <select class="form-control" id="sel1" style="background:#2b2b2b; color:white">
+        <option>SARS-CoV-2</option>
+        </select>
 
-        <p><img src="/static/2.png">Input your viral genome below:</p>
+        <p><img src="/static/2.png">Input your viral genome below (in fasta format):</p>
         <input type="file" id="real-file" name="real-file" hidden="hidden"/>
     <button type="button" class="btn btn-outline-success" id="custom-button">Choose a file</button>
     <span id="custom-text">No file chosen</span>
@@ -98,15 +100,15 @@
 
         <p><img src="static/3.png">Run your inputs through VPRE:</p>
         <button type="submit" id="tool" class="btn btn-outline-success" style="margin-top:2%">Predict</button>
-        <button type="submit" id="tool" class="btn btn-outline-success" style="margin-top:2%; margin-left: 2%" onclick="visualize()">Visualize</button>
     </form>
-    <div class="form-group" style="width:50%; margin-left: 5%; margin-top: 2%;">
+    <form class="form-group" style="width:50%; margin-left: 5%; margin-top: 2%;">
         <label><h4><b>Predicted mRNA sequences:</b></h4></label>
         <div class="visualization-area">
             <p id="result-area">{{prediction_text}}</p>
+            <img src="{{pic_url}}"/>
         </div>
-        <a href="/static/prediction/PredictedSequence.fasta" download><button type="submit" id="download" class="btn btn-outline-primary" style="margin-top:2%px; margin-left: 210px;" onclick="visualize()">Download</button></a>
-    </div>
+        <a href={{download_url}} download><button id="download" type="submit" class="btn btn-outline-primary" style="margin-top:2%; margin-left: 40%;">Download</button></a>
+    </form>
     </div>
     </div>
 </body>
