updated model, logo, webpage link

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link rel='icon' href="/static/transparent.png" type='image/x-icon'/>
+    <link rel='icon' href="/static/vpre favicon.png" type='image/x-icon'/>
     <title>VPRE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/main.css">
@@ -49,7 +49,7 @@
                <ul>
                     <li><a href="/">Tool</a></li>
                     <li><img src="/static/virosight-logo.png"></li>
-                    <li><a href="https://ubcvirosight.godaddysites.com/">Home</a></li>
+                    <li><a href="https://virosight.ca/">Home</a></li>
                </ul>
         </nav>
 </div>
