--- a/templates/index.html
+++ b/templates/index.html
@@ -118,8 +118,8 @@
 <!--            <button type="submit" id="download" class="btn btn-outline-primary" style="margin-top:2%; margin-left: 7%;">Download image</button>-->
 <!--        </form>-->
         </div>
-    </div>
-       <p style="text-align: right; font-size:11px; margin-right: 3%">* Note: The predicted sequence is shorter than the actual spike protein mRNA for demonstration purposes.</p>
+    <div>
+       <p style="text-align: right; font-size:11px">* Note: The predicted sequence is shorter than the actual spike protein mRNA for demonstration purposes.</p>
     </div>
 
     </div>
