added github link

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
 <div class="menu">
         <nav>
                <ul>
-                    <li><a href="https://github.com/UBC-BioDesign/RNN-CoV">Tool</a></li>
+                    <li><a href="https://github.com/UBC-BioDesign/RNN-CoV">GitHub</a></li>
                     <li><img src="/static/virosight-logo.png"></li>
                     <li><a href="https://virosight.ca/">Home</a></li>
                </ul>
@@ -54,7 +54,7 @@
 </div>
     <br>
     <h1><b>VIRAL PREDICTOR FOR mRNA EVOLUTION (VPRE)</b></h1>
-    <h2><b>A software tool brought to you by UBC Virosight</b></h2>
+    <h2><b>An open-source software tool brought to you by UBC Virosight</b></h2>
     <br>
 </header>
 
