--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
 <!--        </form>-->
         </div>
     <div>
-       <p style="text-align: right; font-size:11px">* Note: The predicted sequence is shorter than the actual spike protein mRNA for demonstration purposes.</p>
+       <p style="text-align: right; font-size:11px">* The predicted sequence is shorter than an actual spike protein mRNA for demonstration.</p>
     </div>
 
     </div>
